--- a/Vistas/VistaConsolaSwing/VConsola.form
+++ b/Vistas/VistaConsolaSwing/VConsola.form
@@ -40,6 +40,7 @@
         </constraints>
         <properties>
           <font name="Consolas"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="1f73e" class="javax.swing.JButton" binding="botonEnter">
