--- a/Vistas/VistaConsolaSwing/VConsola.form
+++ b/Vistas/VistaConsolaSwing/VConsola.form
@@ -18,7 +18,9 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <forms defaultalign-horz="false" defaultalign-vert="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <foreground color="-16777216"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="533d0" class="javax.swing.JTextArea" binding="consola">
@@ -26,6 +28,7 @@
             <properties>
               <editable value="false"/>
               <font name="Consolas"/>
+              <foreground color="-16777216"/>
               <text value=""/>
             </properties>
           </component>
