--- a/Vistas/VistaGrafica/ResultadosFinales/Resultados.form
+++ b/Vistas/VistaGrafica/ResultadosFinales/Resultados.form
@@ -14,7 +14,9 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-6891832"/>
+        </properties>
       </component>
       <component id="4e986" class="javax.swing.JButton" binding="iniciarButton">
         <constraints>
